# risky-router

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.model  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: config.toml  main.py  pyproject.toml
backend/data/: exposure.f  frequency_by_hour.json  frequency_by_weather.json
backend/models/stations/0/: freq_model.joblib
backend/models/stations/1/: freq_model.joblib
backend/models/stations/10/: freq_model.joblib
backend/models/stations/11/: freq_model.joblib
backend/models/stations/12/: freq_model.joblib
backend/models/stations/13/: freq_model.joblib
backend/models/stations/14/: freq_model.joblib
backend/models/stations/15/: freq_model.joblib
backend/models/stations/16/: freq_model.joblib
backend/models/stations/17/: freq_model.joblib
backend/models/stations/18/: freq_model.joblib
backend/models/stations/19/: freq_model.joblib
backend/models/stations/2/: freq_model.joblib
backend/models/stations/20/: freq_model.joblib
backend/models/stations/21/: freq_model.joblib
backend/models/stations/23/: freq_model.joblib
backend/models/stations/24/: freq_model.joblib
backend/models/stations/25/: freq_model.joblib
backend/models/stations/26/: freq_model.joblib
backend/models/stations/27/: freq_model.joblib
backend/src/: __init__.py
model/: config.toml  pyproject.toml
model/references/: data_schema.toml
model/src/: __init__.py
model/src/charts/: make_charts.py
model/src/data/: __init__.py  make_data.py
model/src/data/crss/: download.py  (+1 more)
model/src/models/: frequency.py  make_models.py  severity.py
(+37 files in other folders)
