[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Caesar Balona <caesar.balona@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.4.4"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
scikit-learn = "^1.1.2"
pyarrow = "^9.0.0"
requests = "^2.28.1"
tomli = "^2.0.1"
imblearn = "^0.0"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
