[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Caesar Balona <caesar.balona@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beautifulsoup4 = ">=4.11"
requests = ">=2.28"
loguru = ">=0.6"
tqdm = ">=4.64"
pandas = ">=1.4"
matplotlib = ">=3.5"
tomli = ">=2.0"
pyarrow = ">=9.0"
scikit-learn = ">=1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py39", "py310"]
include = '\.pyi?$'
